[package]
name = "launcher-proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
]

[dependencies]
cfg-if = "1.0.0"
lazy_static = "1.5.0"
libc = "0.2.164"
windows-core = "0.58.0"
